[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/blaster-icon.png" type="Texture" id=1]
[ext_resource path="res://UI/bomb-icon.png" type="Texture" id=2]
[ext_resource path="res://UI/zap-icon.png" type="Texture" id=3]
[ext_resource path="res://player/WeaponIcon.gd" type="Script" id=4]

[node name="WeaponIcon" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BurstIcon" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 7.0
texture = ExtResource( 1 )

[node name="BombIcon" type="TextureRect" parent="."]
visible = false
margin_right = 15.0
margin_bottom = 7.0
texture = ExtResource( 2 )

[node name="LaserIcon" type="TextureRect" parent="."]
visible = false
margin_right = 15.0
margin_bottom = 7.0
texture = ExtResource( 3 )
